--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,11 @@
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "knplabs/knp-snappy": "^0.4.3",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "infyomlabs/laravel-generator": "5.3.x-dev",
+        "laravelcollective/html": "^5.3.0",
+        "infyomlabs/adminlte-templates": "5.3.x-dev",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
